# sdbuch.github.io

./: .gitignore  404.html  CNAME  Gemfile  _config.yml  blog.md  feed.xml  index.html  index.md  misc.md  past_updates.md  publications.md  seminar.md  sitemap.xml
.bundle/: config
.claude/: settings.local.json
.github/workflows/: deploy.yml
_bibliography/: refs.bib
_data/: coauthors.yml  navigation.yml
_includes/: contact.html  footer_content.html  head.html  head_custom.html
_includes/scripts/: mathjax.html  misc.html
_layouts/: bib-compact.html  bib.html  default.html  post.html
_plugins/: qmd_converter.rb
_posts/: 2025-03-10-test.md  2025-08-20-jax-1.md  2025-08-20-jax-1.qmd  2025-08-29-jax-2.md  2025-08-29-jax-2.qmd  2025-08-29-jax-3.md  2025-08-29-jax-3.qmd  2025-10-20-manifold-muon.md  2025-10-20-manifold-muon.qmd  pyproject.toml
_sass/whiteglass/: _base.scss  _layout.scss  _syntax-highlighting.scss
_site/: 404.html  CNAME  feed.xml  index.html  robots.txt  sitemap.xml
_site/archives/: index.html
_site/assets/: main.css  main.css.map
_site/blog/: index.html
_site/misc/: index.html
_site/nn_seminar/: index.html
_site/past_updates/: index.html
_site/publications/: index.html
archives/: index.html
assets/: main.css  main.css.map  main.scss
blog/: index.html
blog/jax-1/: index.html
blog/jax-2/: index.html
blog/manifold-muon/: index.html
categories/jax/: index.html
categories/optimization/: index.html
misc/: index.html
nn_seminar/: index.html
past_updates/: index.html
publications/: index.html
(+8 files in other folders)
