[project]
name = "posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.16",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.5",
    "matplotlib-backend-sixel>=0.1.0",
    "pynvim>=0.5.2",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "treescope>=0.1.10",
    "websocket-client>=1.8.0",
]
