[project]
name = "posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.16",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.5",
    "matplotlib-backend-sixel>=0.1.0",
    "optax>=0.2.5",
    "pynvim>=0.5.2",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "treescope>=0.1.10",
    "websocket-client>=1.8.0",
]

[tool.ruff]
# Basic configuration
line-length = 88

[tool.ruff.lint]
# Enable fix mode (equivalent to --fix flag)
fixable = ["ALL"]
unfixable = []

# Rule selection
select = ["E", "W", "F"]  # Error, Warning, and Pyflakes rules

# Rules to ignore
ignore = [
    "F401",  # Unused import
    "F821",  # Undefined name
    "E402",  # Module level import not at top of file
    "F841",  # Local variable assigned but not used
]
